<resources>
  <string name="app_name">SpendWise</string>
  <string name="add_entry">Add a new entry</string>
  <string name="title_label">Title</string>
  <string name="date">Date</string>
  <string name="start_time">Start Time</string>
  <string name="end_time">End Time</string>
  <string name="save_label">Save</string>
  <string name="to">To</string>
  <string name="record_entry">Record Entry</string>
  <string name="share">Share</string>
  <string name="info">Information</string>
  <string name="delete">Delete</string>
  <string name="group">Group</string>
  <string name="rs">Rs.</string>
  <string name="amount">Amount</string>
  <string name="total">Total :</string>
  <string name="edit">Edit</string>
    <string name="desc">Description</string>
  <string name="edit_entry">Edit Entry</string>
    <string name="superscript">super</string>
  <string name="month_year">month, year</string>
  <string name="title_activity_lock_screen">LockScreenActivity</string>
    <string name="january">January</string>
  <string name="february">February</string>
  <string name="march">March</string>
  <string name="april">April</string>
  <string name="may">May</string>
  <string name="june">June</string>
  <string name="july">July</string>
  <string name="august">August</string>
  <string name="september">September</string>
  <string name="october">October</string>
  <string name="november">November</string>
  <string name="december">December</string>
    <string name="text">Text</string>
    <string name="year">Year</string>
    <string name="export_data">Export Data</string>
  <string name="import_data">Import Data</string>
  <string name="delete_data">Delete Data</string>
</resources>