<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_month_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/fragment_entry_background">

        <EditText
            android:id="@+id/month_picker_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year"
            android:inputType="number"
            android:paddingVertical="15dp"
            android:textAlignment="center"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:paddingVertical="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btn_jan"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/january"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toTopOf="parent"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_feb"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/february"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_jan"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_mar"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/march"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_feb"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_apr"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/april"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_mar"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_may"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/may"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_apr"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_jun"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/june"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_may"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_jul"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/july"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_jun"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_aug"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/august"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_jul"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_sep"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/september"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_aug"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_oct"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/october"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_sep"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_nov"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/november"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_oct"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
                <Button
                    android:id="@+id/btn_dec"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="2dp"
                    android:text="@string/december"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:letterSpacing="0.2"
                    app:layout_constraintTop_toBottomOf="@id/btn_nov"
                    android:backgroundTint="@color/fragment_entry_text"
                    android:textColor="@color/fragment_entry_background"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>