<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_entry_background"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="10dp"
    android:weightSum="1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/diary_item_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:text="@string/title_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/fragment_entry_text"
            android:textStyle="italic"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/diary_item_view_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:padding="2dp"
            android:text="@string/superscript"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/fragment_entry_text"
            android:textStyle="italic"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@id/diary_item_view_title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/diary_item_view_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:padding="2dp"
            android:layout_marginTop="-3dp"
            android:layout_marginStart="20dp"
            android:text="@string/month_year"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/fragment_entry_text"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/diary_item_view_title"
            app:layout_constraintTop_toBottomOf="@id/diary_item_view_title2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="120dp"
        android:layout_marginStart="10dp"
        android:background="@color/fragment_entry_partition"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/diary_item_view_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="2dp"
        android:text="@string/desc"
        android:textColor="@color/fragment_entry_text"
        android:textAllCaps="true"
        android:textStyle="italic"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_entry_text_background"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/diary_item_view_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:paddingVertical="15dp"
            android:paddingHorizontal="15dp"
            android:text="@string/info"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </ScrollView>

</LinearLayout>
