<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="15dp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/design_default_color_secondary"
      android:orientation="vertical"
      android:backgroundTint="#EFD9CE"
      android:paddingHorizontal="5dp"
      android:paddingVertical="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/diary_item_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:letterSpacing="0.1"
          android:text="@string/title_label"
          android:textAppearance="@style/TextAppearance.AppCompat.Display1"
          android:textColor="#25283D"
          android:textStyle="italic"
          android:layout_marginStart="10dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/diary_item_title2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:letterSpacing="0.1"
          android:padding="2dp"
          android:text="@string/superscript"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          android:textColor="#25283D"
          android:textStyle="italic"
          android:layout_marginStart="3dp"
          app:layout_constraintStart_toEndOf="@id/diary_item_title"
          app:layout_constraintTop_toTopOf="parent" />

      <TextView
          android:id="@+id/diary_item_title3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:letterSpacing="0.1"
          android:padding="2dp"
          android:layout_marginTop="-5dp"
          android:layout_marginStart="10dp"
          android:text="@string/month_year"
          android:textAppearance="@style/TextAppearance.AppCompat.Small"
          android:textColor="#25283D"
          android:textStyle="italic"
          app:layout_constraintStart_toEndOf="@id/diary_item_title"
          app:layout_constraintTop_toBottomOf="@id/diary_item_title2" />

      <LinearLayout
          android:id="@+id/diary_item_delete"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent">
        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/ic_delete"
            android:backgroundTint="@color/fragment_button"
            android:contentDescription="@string/delete"
            android:clickable="false"
            tools:ignore="TouchTargetSizeCheck" />
      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
          android:id="@+id/diary_item_desc"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingHorizontal="12dp"
          android:paddingVertical="2dp"
          android:text="@string/desc"
          android:textColor="#25283D"
          android:textAllCaps="true"
          android:textStyle="italic"
          android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:id="@+id/diary_item_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:layout_marginVertical="5dp"
        android:background="#86FFFFFF"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"/>

  </LinearLayout>
</androidx.cardview.widget.CardView>
